feat(Problem6.java): 매개변수로 받은 리스트를 User 리스트로 변환